attempting to fix alignment and nav issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 .container{
-    margin-left: 150px;
-    margin-right: 150px;
     margin-top: 40px;
     font-family: 'Poppins', sans-serif;
+    width: 100%;
 }
