--- a/src/Body.css
+++ b/src/Body.css
@@ -3,8 +3,12 @@
     margin-bottom: 200px;
 }
 
-.split-feature{
-    display: block;
+.split-feature-2{
+    margin-top: 100px;
+}
+
+.split-feature-3{
+    margin-top: 100px;
 }
 
 .project-description{
