--- a/src/Navigation.css
+++ b/src/Navigation.css
@@ -1,4 +1,4 @@
 
-.link{
+.links{
     margin-right: 25px;
 }
